# oro_base_edge_layer

./: .gitignore  .gitmodules  README.md
command_executor/: CMakeLists.txt  README.md  command_executor.service
command_executor/include/command_executor/: command.hpp  command_dispatcher.hpp  command_executor.hpp  command_handlers.hpp  command_queue.hpp  command_registry.hpp  signal_logger.hpp  status_subscriber.hpp
command_executor/src/: command_dispatcher.cpp  command_executor.cpp  command_handlers.cpp  main.cpp  signal_logger.cpp  status_subscriber.cpp
command_executor/tests/: run_tests.sh  test_command_executor.py  test_lid_actuation.py  unit_test.py
config/: oro_base_edge_layer_config.json
dog_wellbeing_node/: CMakeLists.txt
dog_wellbeing_node/include/: dog_wellbeing_monitor.hpp  zmq_subscriber.hpp
dog_wellbeing_node/src/: dog_wellbeing_monitor.cpp  main.cpp  zmq_subscriber.cpp
environment_condition_node/: CMakeLists.txt
environment_condition_node/include/: ambient_light_estimator.hpp  environment_condition_monitor.hpp  zmq_subscriber.hpp
environment_condition_node/src/: ambient_light_estimator.cpp  environment_condition_monitor.cpp  main.cpp  zmq_subscriber.cpp
health_monitoring_node/: CMakeLists.txt
health_monitoring_node/include/: config.hpp  health_monitor.hpp  signal_record.hpp  zmq_subscriber.hpp
health_monitoring_node/src/: health_monitor.cpp  main.cpp  zmq_subscriber.cpp
scheduled_task_manager/: CMakeLists.txt  README.md  scheduled_task_manager.service
scheduled_task_manager/docs/: database_seed_commands.md  jobs_architecture_and_validation.md
scheduled_task_manager/include/scheduled_task_manager/: job.hpp  job_executor.hpp  job_registry.hpp  lock_manager.hpp  scheduler_config.hpp  scheduler_engine.hpp
scheduled_task_manager/include/scheduled_task_manager/jobs/: care_jobs.hpp  cleanup_jobs.hpp  device_jobs.hpp  health_jobs.hpp  retry_jobs.hpp  summary_jobs.hpp
scheduled_task_manager/src/: job_executor.cpp  job_registry.cpp  lock_manager.cpp  main.cpp  scheduler_config.cpp  scheduler_engine.cpp
scheduled_task_manager/src/jobs/: care_jobs.cpp  cleanup_jobs.cpp  device_jobs.cpp  health_jobs.cpp  retry_jobs.cpp  summary_jobs.cpp
scripts/: launch_edge_layer.py
storage_handoff/: CMakeLists.txt  install.sh  requirements-dev.txt  requirements.txt  seed_device.sql  setup_local_postgres.sh  sync_queue.db
storage_handoff/build_install/: CMakeCache.txt  Makefile  cmake_install.cmake  libstorage_handoff.so.1  libstorage_handoff.so.1.0.0
storage_handoff/cmake/: storage_handoffConfig.cmake.in
storage_handoff/database/: schema.sql  sync_queue_schema.sql
storage_handoff/db_queries/: events  signals
storage_handoff/docs/: README.md
storage_handoff/include/storage_handoff/: signal_record.hpp  storage_handoff.hpp
storage_handoff/src/: storage_handoff.cpp
